# stm32f2xx-hal

./: Cargo.toml  README.md  examples_test.md  readme.md  todo.md
.cargo/: config
.github/: bors.toml
.github/workflows/: ci.yml  clippy.yml
debug/: .gdbinit  openocd.cfg
examples/: blinky-timer-irq.rs  delay-blinky.rs  delay-syst-blinky.rs  delay-timer-blinky.rs  dwt-blinky.rs  pwm.rs  rng-display.rs  sd.rs  serial.rs  ssd1306-image.rs  timer-periph.rs  timer-syst.rs  usb_serial.rs
src/: adc.rs  gpio.rs  i2c.rs  i2s.rs  lib.rs  otg_fs.rs  otg_hs.rs  prelude.rs  pwm.rs  pwm_input.rs  qei.rs  rcc.rs  rng.rs  sdio.rs  serial.rs  spi.rs  timer.rs
src/delay/: timer.rs
src/rcc/: enable.rs  mod.rs  pll.rs
