[package]
edition = "2018"

authors = ["Mikael <mike7b4@pm.me>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32F2 series microcontrollers"
documentation = "https://docs.rs/stm32f2xx-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32f2xx",
    "hal",
]
license = "0BSD"
name = "stm32f2xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f2xx-hal"
version = "0.1.0"

[package.metadata.docs.rs]
features = ["stm32f205", "rt", "usb_fs"]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
nb = "1"
rand_core = "0.6"
stm32f2 = "0.14"
synopsys-usb-otg = { version = "0.2", features = ["cortex-m"], optional = true }
embedded-dma = "0.1"

[dependencies.bare-metal]
version = "1"
# features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dev-dependencies]
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.3"
arrayvec = { version = "0.5.1", default-features = false }
panic-halt = "0.2.0"
usb-device = "0.2.7"
usbd-serial = "0.1"
micromath = "1.0.0"

[features]
device-selected = []
rt = ["stm32f2/rt"]
stm32f205 = ["stm32f2/stm32f215", "device-selected"]
stm32f215 = ["stm32f2/stm32f215", "device-selected"]
stm32f207 = ["stm32f2/stm32f217", "device-selected"]
stm32f217 = ["stm32f2/stm32f217", "device-selected"]

usb_fs = ["synopsys-usb-otg", "synopsys-usb-otg/fs"]
usb_hs = ["synopsys-usb-otg", "synopsys-usb-otg/hs"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

[[example]]
name = "usb_serial"
required-features = ["rt", "stm32f205", "usb_fs"]

[[example]]
name = "delay-blinky"
required-features = ["rt", "stm32f205"]

[[example]]
name = "dwt-blinky"
required-features = ["rt", "stm32f205"]
